// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledComponentsRegistry should not return inline styles when rendering the wrapped component server side 1`] = `
<DocumentFragment>
  <div
    class="gFlaSj"
  />
</DocumentFragment>
`;

exports[`StyledComponentsRegistry should return inline styles when rendering the wrapped component client side 1`] = `
<DocumentFragment>
  .c0 {
  background-color: blue;
  color: red;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
